--- a/client/src/style/home.css
+++ b/client/src/style/home.css
@@ -26,7 +26,7 @@ main{
     text-decoration: none;
     color: white;
     border-radius: 20px;
-    margin-right: 30px;
+    margin-right: 85px;
 }
 
 .m-box-text{
@@ -39,7 +39,8 @@ main{
 }
 
 .m-box-text h1{
-    font-size: 40px;
+    font-size: 50px;
+    
 }
 
 .air-img{
@@ -65,6 +66,39 @@ main{
     position: relative;
     justify-self: flex-start;
 }
+
+.f-wrapper{
+    padding-top: 50px;
+    width: 100vw;
+    background-color: white;
+    padding-bottom: 120px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.f-wrapper h1{
+    font-size: 40px;
+    margin-top: 10px;
+    
+}
+
+.f-wrapper span{
+    width: 100px;
+    height: 5px;
+    border-radius: 10px;
+    background-color: #212F3C;
+}
+
+.f-box-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+
+
 
 
 
@@ -125,5 +159,9 @@ main{
     .m-box1{
     
         justify-self: center;
+    }
+
+    .m-box a{
+        margin-right: 0;
     }
 }
