--- a/client/src/style/navbar.css
+++ b/client/src/style/navbar.css
@@ -8,7 +8,7 @@ nav{
 }
 
 .logo,.nav-icons{
-    margin: 0 40px 0 40px;
+    margin: 0 30px 0 30px;
 }
 
 .logo{
@@ -53,6 +53,45 @@ nav{
     font-size: 30px;
 }
 
+
+.r-nav{
+    width: 250px;
+    height: 100vh;
+    background-color: whitesmoke;
+    position: absolute;
+    top: 70px;
+    left: 0px;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding-top: 30px;
+    transition: 1s;
+    border-top: solid gray 1px;
+    text-align: center;
+}
+
+.r-nav h1{
+    margin-top: 70px;
+    font-weight: normal;
+    tab-size: 30px;
+}
+
+.r-nav-item{
+    width: 100%;
+    font-size: 25px;
+    text-align: center;
+    padding: 5px 0 5px 0;
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
+
+.r-nav-item:hover{
+    color: whitesmoke;
+    background-color: black;
+}
+
 @media screen and (max-width: 500px) {
 
     .menu{
@@ -67,6 +106,5 @@ nav{
     .nav-icons{
         gap: 5px;
     }
-
 
 }
