--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,4 +7,8 @@
 
 .wrapper{
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 20px;
 }
